# MustMonitor

./: .gitignore  CMakeLists.txt  README.md  config.json  main.qml
components/: Charts.qml  Dashboard.qml  Logs.qml  Settings.qml
docs/: modbus_protocol.md
src/: appconfig.cpp  appconfig.h  dataviewmodel.cpp  dataviewmodel.h  main.cpp  modbusclient.cpp  modbusclient.h  settingsmanager.cpp  settingsmanager.h  udpreader.cpp  udpreader.h
